feat: introduce CS concat() overloads for different cardinalities (#340)